--- a/FakeDOORS/App.xaml
+++ b/FakeDOORS/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="FakeDOORS.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FakeDOORS"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:FakeDOORS">
     <Application.Resources>
          
     </Application.Resources>
