--- a/FakeDOORS/MainWindow.xaml
+++ b/FakeDOORS/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="12*"/>
+            <RowDefinition Height="1*" MinHeight="25" MaxHeight="50"/>
+        </Grid.RowDefinitions>
+        <ContentControl Grid.Row="0" Name="DatabaseViewControl"/>
     </Grid>
 </Window>
