Basic test case view

--- a/FakeDOORS/DatabaseControls/DatabaseView.xaml
+++ b/FakeDOORS/DatabaseControls/DatabaseView.xaml
@@ -11,6 +11,8 @@
             <ColumnDefinition Width="1*" MaxWidth="165"/>
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
+        
+        <ContentControl Grid.Column="0" Name="TestCasesViewControl"/>
         <ContentControl Grid.Column="1" Name="RequirementsViewControl"/>
     </Grid>
 </UserControl>
