--- a/FakeDOORS/MainWindow.xaml
+++ b/FakeDOORS/MainWindow.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FakeDOORS"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1500">
+        mc:Ignorable="d" Loaded="Window_Loaded"
+        Title="FakeDOORS" Height="800" Width="1500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="12*"/>
