--- a/FakeDOORS/DatabaseControls/RequirementsControls/RequirementsView.xaml
+++ b/FakeDOORS/DatabaseControls/RequirementsControls/RequirementsView.xaml
@@ -14,14 +14,14 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <DataGrid Name="ReqHelperTop" Grid.Row="0"
+        <DataGrid Name="ReqHelperTop" Grid.Row="0" Style="{x:Null}"
                   RowHeight="19" ItemsSource="{Binding ReqTopHelperData}"
                   CanUserAddRows="False" IsReadOnly="True"
                   HeadersVisibility="None"
                   FontWeight="ExtraBold" FontSize="13"
                   VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Hidden" GotFocus="Helper_GotFocus"/>
 
-        <DataGrid Name="ReqDataGrid" Grid.Row="1" ItemsSource="{Binding Requirements}"
+        <DataGrid Name="ReqDataGrid" Grid.Row="1" ItemsSource="{Binding Requirements}" Style="{x:Null}"
                   RowHeight="20" CanUserResizeRows="False"
                   CanUserSortColumns="False" AutoGenerateColumns="False"
                   VirtualizingPanel.IsVirtualizing="True" VirtualizingPanel.VirtualizationMode="Recycling"
@@ -31,7 +31,7 @@
                   LayoutUpdated="ReqDataGrid_LayoutUpdated"
                   ColumnDisplayIndexChanged="ReqDataGrid_ColumnDisplayIndexChanged"/>
 
-        <DataGrid Name="ReqHelperBottom" Grid.Row="2"
+        <DataGrid Name="ReqHelperBottom" Grid.Row="2" Style="{x:Null}"
                   RowHeight="19" ItemsSource="{Binding ReqBottomHelperData}"
                   CanUserAddRows="False" IsReadOnly="True"
                   HeadersVisibility="None" 
