--- a/FakeDOORS/DatabaseControls/TestCasesControls/TestCasesView.xaml
+++ b/FakeDOORS/DatabaseControls/TestCasesControls/TestCasesView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              DataContext="{Binding RelativeSource={RelativeSource Self}}"
              d:DesignHeight="450" d:DesignWidth="300">
-    <Grid>
+    <Grid Margin="0 10">
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
             <RowDefinition Height="30"/>
