--- a/FakeDOORS/MainWindow.xaml
+++ b/FakeDOORS/MainWindow.xaml
@@ -1,11 +1,24 @@
-﻿<Window x:Class="FakeDOORS.MainWindow"
+﻿<Controls:MetroWindow x:Class="FakeDOORS.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FakeDOORS"
         mc:Ignorable="d" Loaded="Window_Loaded"
-        Title="FakeDOORS" Height="800" Width="1500">
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        GlowBrush="{DynamicResource AccentColorBrush}"
+        Icon="fakedoors.ico"
+        ShowIconOnTitleBar="True"
+        Title="FakeDOORS" Height="800" Width="1500" ShowInTaskbar="True">
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <StackPanel Orientation="Horizontal">
+                <iconPacks:PackIconModern Width="20" Height="20" Kind="Settings" VerticalAlignment="Center"/>
+                <TextBlock Margin="4" VerticalAlignment="Center" Text="Settings"/>
+            </StackPanel>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="12*"/>
@@ -14,4 +27,4 @@
         <ContentControl Grid.Row="0" Name="DatabaseViewControl"/>
         <ContentControl Grid.Row="1" Name="UpdaterViewControl"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
