--- a/FakeDOORS/UpdaterControls/DoorsExporterWindow.xaml
+++ b/FakeDOORS/UpdaterControls/DoorsExporterWindow.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="FakeDOORS.UpdaterControls.DoorsExporterWindow"
+﻿<Controls:MetroWindow x:Class="FakeDOORS.UpdaterControls.DoorsExporterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:FakeDOORS.UpdaterControls"
-        mc:Ignorable="d"
+        mc:Ignorable="d" WindowStartupLocation="CenterScreen"
         Title="Doors Exporter" SizeToContent="WidthAndHeight" MinWidth="500" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
@@ -52,4 +53,4 @@
         </Grid>
 
     </Grid>
-</Window>
+</Controls:MetroWindow>
