--- a/FakeDOORS/SettingsControls/SettingsView.xaml
+++ b/FakeDOORS/SettingsControls/SettingsView.xaml
@@ -4,6 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FakeDOORS.SettingsControls"
+             xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+              DataContext="{Binding RelativeSource={RelativeSource Self}}"
+             Dialog:DialogParticipation.Register="{Binding}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="5">
@@ -13,15 +16,25 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Column="0" Margin="10">
-            <TextBlock Text="Installer Path" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <TextBlock Text="Installer Path:" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             <Grid Margin="10 0 10 10">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Name="ServerMainPath" IsEnabled="False" Loaded="ServerMainPath_Loaded"
+                <TextBlock Grid.Column="0" IsEnabled="False" Loaded="ServerMainPath_Loaded"
                            VerticalAlignment="Center" HorizontalAlignment="Left"/>
                 <Button Grid.Column="1" Content="Open" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="5 2" Click="OpenServerPathButton_Click"/>
+            </Grid>
+            <TextBlock Text="FakeDOORS is installed in:" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <Grid Margin="10 0 10 10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="50"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" IsEnabled="False" Loaded="InstallDirPath_Loaded"
+                           VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <Button Grid.Column="1" Content="Open" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="5 2" Click="OpenInstallDirPathButton_Click"/>
             </Grid>
             <Button Content="Download Newest Version" Margin="10" Click="Button_Click"/>
             <Button Content="Open Changelog" Margin="10" Click="Button_Click_1"/>
