--- a/FakeDOORS/UpdaterControls/UpdaterView.xaml
+++ b/FakeDOORS/UpdaterControls/UpdaterView.xaml
@@ -4,7 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FakeDOORS"
-             mc:Ignorable="d" 
+             xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+             DataContext="{Binding RelativeSource={RelativeSource Self}}"
+             Dialog:DialogParticipation.Register="{Binding}"
+             mc:Ignorable="d" Loaded="UpdateButton_Loaded"
              d:DesignHeight="50" d:DesignWidth="800">
     <Grid>
         <StackPanel Orientation="Horizontal"
